[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/get_ready_menu.gd" type="Script" id=1]
[ext_resource path="res://Resources/Themes/menu_label_title_theme.tres" type="Theme" id=2]
[ext_resource path="res://Resources/Themes/menu_default_theme.tres" type="Theme" id=3]

[node name="GetReadyMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -592.0
margin_top = -188.0
margin_right = 593.0
margin_bottom = 189.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
text = "Get ready!"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisappearTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="DisappearTimer" to="." method="_on_DisappearTimer_timeout"]
